# nano-bridge-1024

./: .env.config-usdc-peer.example  .env.evm.deploy.example  .env.invoke.example  .env.svm.deploy.example  .gitignore  CONFIG_SUMMARY.md  Dockerfile-dev  README.md  TODO.md  draft.md  start-dev-container.sh  update-relayer-config.sh
broker/evm-gateway-service/: gateway-cli.sh
broker/evm-gateway-service/src/: main.rs
broker/withdraw-gateway-service/: README.md  package-lock.json  package.json  withdraw-cli.sh
broker/withdraw-gateway-service/src/: index.ts
broker/withdraw-gateway-service/src/config/: index.ts
broker/withdraw-gateway-service/src/services/: lifi.ts
docs/: api.md  design.md  progress.md  testplan.md  transaction-proof-design.md
evm/bridge1024/: .gitignore  README.md  foundry.toml  package-lock.json  package.json
evm/bridge1024/src/: Bridge1024.sol  MockUSDC.sol
evm/bridge1024/test/: Bridge1024.t.sol
gateway/: README.md
gateway/evm-gateway-service/: .env.example  Cargo.toml
gateway/evm-gateway-service/src/: main.rs
gateway/withdraw-gateway-service/: .env.example  package-lock.json
gateway/withdraw-gateway-service/src/: index.ts
gateway/withdraw-gateway-service/src/config/: index.ts
gateway/withdraw-gateway-service/src/routes/: withdraw.ts
gateway/withdraw-gateway-service/src/services/: lifi.ts
gateway/withdraw-gateway-service/src/utils/: rateLimiter.ts
relayer/: .dockerignore  Dockerfile  Dockerfile.e2s-listener  Dockerfile.e2s-submitter  Dockerfile.s2e  README.md  README_E2S.md  README_S2E.md  deploy.sh  init-new-relayer.sh  logs.sh  restart.sh  start-container.sh  start-relayer-indocker.sh  status.sh  stop.sh
relayer/e2s/: Cargo.toml  config.example.env
relayer/e2s-listener/: Cargo.toml  config.example.env
relayer/e2s-listener/src/: config.rs  listener.rs  main.rs
relayer/e2s-submitter/: Cargo.toml  config.example.env
relayer/e2s-submitter/src/: api.rs  config.rs  main.rs  signer.rs  submitter.rs
relayer/e2s/src/: api.rs  config.rs  listener.rs  main.rs  signer.rs  submitter.rs
relayer/s2e/: Cargo.toml  README_SETUP.md  config.example.env
relayer/s2e/src/: api.rs  config.rs  listener.rs  main.rs  signer.rs  submitter.rs
relayer/shared/: Cargo.toml
relayer/shared/src/: config.rs  error.rs  gas.rs  lib.rs  logger.rs  metrics.rs  retry.rs  types.rs
scripts/: 01-deploy-evm.sh  02-deploy-svm.sh  03-config-usdc-peer.sh  04-register-relayer.sh  04-register-static-relayers.sh  05-fund-relayer.sh  06-start-relayer.sh  README.md  check-request-status.ts  check-transaction.ts  configure-usdc-native.js  configure-usdc-simple.js  cross-chain-test-s2e.ts  cross-chain-test.ts  deploy-evm.sh  deploy-mock-usdc.sh  deploy-svm.sh  evm-admin.ts  evm-user.ts  init-svm-fresh.sh  package-lock.json  package.json  redeploy-svm.sh  remove-relayer.ts  start-relayer.sh  svm-admin.ts  svm-user.ts  test-usdc-amount.sh  tsconfig.json
svm/bridge1024/: .gitignore  Anchor.toml  ED25519_IMPLEMENTATION_STATUS.md  README.md  TEST_SUMMARY.md  package.json
svm/bridge1024/programs/bridge1024/: Cargo.toml
svm/bridge1024/programs/bridge1024/src/: lib.rs  lib.rs.backup  verify_full.rs  verify_impl.rs  verify_optimized.rs  verify_secp256k1.rs  verify_secp256k1_v2.rs  verify_secp256k1_v3.rs  verify_simple.rs
svm/bridge1024/tests/: add_compute_budget.py  bridge1024.ts
