[package]
name = "evm-gateway-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evm-gateway-service"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
# HTTP 框架
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# 错误处理
anyhow = "1.0"
# 配置管理
dotenvy = "0.15"

# EVM 相关 (Arbitrum/Ethereum)
ethers = { version = "2.0.14", features = ["rustls"] }

# 其他
hex = "0.4"
