[package]
name = "e2s-listener"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2s-listener"
path = "src/main.rs"

[dependencies]
# 共享库
shared = { path = "../shared" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
# HTTP 框架
axum = "0.7"
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 配置管理
dotenvy = "0.15"

# EVM 相关 (Arbitrum/Ethereum)
ethers = { version = "2.0.14", features = ["rustls", "ws"] }

# 其他
futures = "0.3"
hex = "0.4"

