[package]
name = "e2s-submitter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "e2s-submitter"
path = "src/main.rs"

[dependencies]
# 共享库
shared = { path = "../shared" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
# HTTP 框架
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 配置管理
dotenvy = "0.15"

# SVM 相关 (Solana/1024chain)
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "3.5"
spl-associated-token-account = "1.1"

# 密码学
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"

# 其他
futures = "0.3"

