[package]
name = "s2e"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s2e-relayer"
path = "src/main.rs"

[dependencies]
# 共享库
shared = { path = "../shared" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }
# HTTP 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 配置管理
config = "0.14"
dotenvy = "0.15"

# SVM 相关 (Solana/1024chain)
solana-client = "1.18"
solana-sdk = "1.18"
solana-account-decoder = "1.18"
anchor-client = { version = "0.29", features = ["async"] }
anchor-lang = "0.29"
borsh = "0.10"

# EVM 相关 (Arbitrum/Ethereum)
ethers = { version = "2.0", features = ["rustls", "ws"] }

# 密码学 (ECDSA)
secp256k1 = { version = "0.28", features = ["rand-std"] }
sha2 = "0.10"
hex = "0.4"

# 其他
futures = "0.3"
async-trait = "0.1"
